updating font color to address contrast issue

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ p {
 }
 
 .section-title span {
-	color: gold;
+	color: #ef2e55;
 }
 
 .cta {
